@@ -12,6 +12,7 @@
 -Fix: Some crashes
 -Fix: Handle newer ffmpeg versions
 -Fix: Don't wait with Replay Gain calculation for items with same album name but no Replay Gain conversion option set
+-Fix: Don't convert all files at once if the conversion starts with copying files with the same input an output codec
 
 2.1.90 (2.2.0 rc1):
 -Add: Detect (DRM)-encrypted wma and m4a files
